fix overflow

--- a/frontend/wildlitz/src/styles/homepage.css
+++ b/frontend/wildlitz/src/styles/homepage.css
@@ -33,7 +33,6 @@ html {
   color: white;
   padding: 20px;
   font-family: 'Nunito', 'Bubblegum Sans', cursive, sans-serif;
-  overflow-x: hidden;
   position: relative;
 }
 
